// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - select renders correctly 1`] = `
<jest>
  <label
    class="form-label"
    for="select-1"
  >
    A select form element
  </label>
  <select
    class="form-select"
    id="select-1"
    required="true"
  >
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the select element
  </div>
</jest>
`;

exports[`OE - select renders correctly as a multiple choice select 1`] = `
<jest>
  <label
    class="form-label"
    for="multiselect-1"
  >
    A multiselect form element
  </label>
  <select
    id="multiselect-1"
    multiple="true"
    required="true"
  >
    <optgroup
      label="Group 1"
    >
      <option
        value="1"
      >
        Option group 1
      </option>
      <option
        value="2"
      >
        Option group 2
      </option>
      <option
        value="3"
      >
        Option group 3
      </option>
    </optgroup>
    <option
      value="5"
    >
      a select option
    </option>
    <option
      value="6"
    >
      another select option
    </option>
    <option
      value="7"
    >
      another option
    </option>
    <option
      value="8"
    >
      last option
    </option>
    <option
      selected=""
      value="9"
    >
      the selected option
    </option>
  </select>
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the select element
  </div>
</jest>
`;

exports[`OE - select renders correctly when disabled 1`] = `
<jest>
  <label
    class="form-label"
    for="select-1"
  >
    A select form element
  </label>
  <select
    class="form-select"
    disabled="true"
    id="select-1"
    required="true"
  >
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the select element
  </div>
</jest>
`;

exports[`OE - select renders correctly when invalid 1`] = `
<jest>
  <label
    class="form-label"
    for="select-1"
  >
    A select form element
  </label>
  <select
    class="form-select is-invalid"
    id="select-1"
    required="true"
  >
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the select element
  </div>
</jest>
`;

exports[`OE - select renders correctly when multiple 1`] = `
<jest>
  <label
    class="form-label"
    for="select-1"
  >
    A select form element
  </label>
  <select
    class="form-select"
    id="select-1"
    multiple="true"
    required="true"
  >
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the select element
  </div>
</jest>
`;

exports[`OE - select renders correctly when readonly 1`] = `
<jest>
  <label
    class="form-label"
    for="select-1"
  >
    A select form element
  </label>
  <select
    class="form-select"
    id="select-1"
    required="true"
  >
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the select element
  </div>
</jest>
`;

exports[`OE - select renders correctly when required 1`] = `
<jest>
  <label
    class="form-label"
    for="select-1"
  >
    A select form element
  </label>
  <select
    class="form-select"
    id="select-1"
    required="true"
  >
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the select element
  </div>
</jest>
`;

exports[`OE - select renders correctly when valid 1`] = `
<jest>
  <label
    class="form-label"
    for="select-1"
  >
    A select form element
  </label>
  <select
    class="form-select is-valid"
    id="select-1"
    required="true"
  >
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the select element
  </div>
</jest>
`;

exports[`OE - select renders correctly with a label 1`] = `
<jest>
  <label
    class="form-label"
    for="select-1"
  >
    A select label
  </label>
  <select
    class="form-select"
    id="select-1"
    required="true"
  >
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the select element
  </div>
</jest>
`;

exports[`OE - select renders correctly with an hidden label 1`] = `
<jest>
  <label
    class="form-label visually-hidden"
    for="select-1"
  >
    A select label
  </label>
  <select
    class="form-select"
    id="select-1"
    required="true"
  >
    <option
      value="1"
    >
      a select option
    </option>
    <option
      value="2"
    >
      another select option
    </option>
    <option
      value="3"
    >
      another option
    </option>
    <option
      value="4"
    >
      last option
    </option>
    <option
      selected=""
      value=""
    >
      the selected option
    </option>
  </select>
  <div
    class="invalid-feedback"
  >
    Invalid feedback example
  </div>
  <div
    class="valid-feedback"
  >
    Valid feedback example
  </div>
  <div
    class="form-text"
    id="helperText"
  >
    Helper text for the select element
  </div>
</jest>
`;
